--- a/EcoCareApp/EcoCareApp/Views/Graphs.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Graphs.xaml
@@ -6,90 +6,23 @@
              xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms" xmlns:views="clr-namespace:EcoCareApp.Views" xmlns:ViewModels="clr-namespace:EcoCareApp.ViewModels"
              x:DataType="ViewModels:GraphsViewModel" xmlns:models="EcoCareApp.Models.DataItem">
     <ContentView.Content>
-        <StackLayout>
-            <Label Text="{Binding Title}" FontSize="Large" HorizontalOptions="Center"></Label>
-            <Label Text="   " FontSize="Large"></Label>
-            <microcharts:ChartView Chart="{Binding MainChart}" HeightRequest="250"/>
-            <Label Text="   " FontSize="Large"></Label>
-            <Button Text="Next Chart" Command="{Binding NextChart}"></Button>
-        </StackLayout>
-    </ContentView.Content>
-</ContentView>
-<!--<ResourceDictionary>
-            <chart:ChartColorCollection x:Key="Colors">
-                <Color>Yellow</Color>
-                <Color>Gray</Color>
-                <Color>Maroon</Color>
-            </chart:ChartColorCollection>
-        </ResourceDictionary>
-    </ContentView.Resources>
-    <RefreshView x:Name="refreshView"
+
+        <RefreshView x:Name="refreshView" 
              Command="{Binding RefreshCommand}"
              IsRefreshing="{Binding IsRefreshing}">
-        <StackLayout x:Name="stack">
-            <StackLayout.Resources>
-                <ResourceDictionary>
-                    <DataTemplate x:Key="toolTipTemplate1">
-                        <StackLayout BackgroundColor="#404041">
-                            <StackLayout.Padding>
-                                <OnPlatform x:TypeArguments="Thickness" WinPhone="3,3,3,3" />
-                            </StackLayout.Padding>
-                            <Label Text="Users" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" TextColor="White" FontAttributes="Bold" FontFamily="Helvetica" Margin="{OnPlatform Default='0', WPF='0,4,0,0'}" FontSize="12" Grid.Row="0"/>
-                            <BoxView Color="White" HeightRequest="{OnPlatform Default='0.75', WPF='0.35'}" Margin="{OnPlatform Default='0', WPF='4,0,4,0'}" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" />
-                            <StackLayout Orientation="Horizontal"  VerticalOptions="FillAndExpand" BackgroundColor="#404041" Spacing="0" Padding="3" Margin="0">
-                                <Label Text="date" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand" TextColor="#CCCCCC" FontAttributes="Bold" FontFamily="Helvetica" FontSize="12" Margin="{OnPlatform Default='0'}"/>
-                                <Label VerticalTextAlignment="Center" HorizontalOptions="EndAndExpand" TextColor="White" FontAttributes="Bold" FontFamily="Helvetica" Margin="{OnPlatform Default='0'}" FontSize="12" />
-                            </StackLayout>
-                        </StackLayout>
-                    </DataTemplate>
-                </ResourceDictionary>
-            </StackLayout.Resources>
-            <chart:SfChart x:Name="Chart" SideBySideSeriesPlacement="False" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <chart:SfChart.Margin>
-                    <OnPlatform x:TypeArguments="Thickness" WinPhone="0,0,15,0" />
-                </chart:SfChart.Margin>
-                <chart:SfChart.Title>
-                    <chart:ChartTitle Text="Internet Users - 2016" />
-                </chart:SfChart.Title>
-                <chart:SfChart.BindingContext>
-                    <ViewModels:GraphsViewModel x:Name="viewmodel"/>
-                </chart:SfChart.BindingContext>
-                <chart:SfChart.ChartBehaviors>
-                    <chart:ChartTooltipBehavior BackgroundColor="#404041" />
-                </chart:SfChart.ChartBehaviors>
-                <chart:SfChart.PrimaryAxis>
-                    <chart:CategoryAxis x:Name="primary" ArrangeByIndex="False" LabelPlacement="BetweenTicks" ShowMajorGridLines="false">
-                        <chart:CategoryAxis.LabelStyle>
-                            <chart:ChartAxisLabelStyle x:Name="axisLabelStyle" WrappedLabelAlignment="Center" TextColor="Black">
-                                <chart:ChartAxisLabelStyle.MaxWidth>
-                                    <OnPlatform x:TypeArguments="x:Double" WinPhone="80" Android="40" iOS="40" >
-                                        <On Platform="WPF" Value="80"/>
-                                    </OnPlatform>
-                                </chart:ChartAxisLabelStyle.MaxWidth>
-                            </chart:ChartAxisLabelStyle>
-                        </chart:CategoryAxis.LabelStyle>
-                    </chart:CategoryAxis>
-                </chart:SfChart.PrimaryAxis>
-                <chart:SfChart.SecondaryAxis>
-                    <chart:NumericalAxis Minimum="0" Maximum="80" IsVisible="false" ShowMajorGridLines="false">
-                    </chart:NumericalAxis>
-                </chart:SfChart.SecondaryAxis>
-                <chart:SfChart.Series>
-                    <chart:ColumnSeries x:Name="Series1" ItemsSource="{Binding UserData}" XBindingPath="DateGraph" YBindingPath="ValueFootPrint" EnableTooltip="true" TooltipTemplate="{StaticResource toolTipTemplate1}">
-                        <chart:ColumnSeries.DataMarker>
-                            <chart:ChartDataMarker >
-                                <chart:ChartDataMarker.LabelStyle>
-                                    <chart:DataMarkerLabelStyle LabelPosition="Outer" LabelFormat="#.#'M'" Font="12">
-                                    </chart:DataMarkerLabelStyle>
-                                </chart:ChartDataMarker.LabelStyle>
-                            </chart:ChartDataMarker>
-                        </chart:ColumnSeries.DataMarker>
-
-                    </chart:ColumnSeries>
-                </chart:SfChart.Series>
-                <chart:SfChart.ColorModel>
-                    <chart:ChartColorModel Palette="Custom" CustomBrushes="{StaticResource Colors}"/>
-                </chart:SfChart.ColorModel>
-            </chart:SfChart>
-        </StackLayout>
-    </RefreshView>-->
+            <StackLayout>
+                <Label
+                        FontSize="20"
+                        Style="{StaticResource DescriptionLabelStyle}"
+                        TextColor="#184e77" Text="{Binding Stars, StringFormat='{0:F0}★'}"
+                        HorizontalTextAlignment="End" HorizontalOptions="End" 
+                             IsVisible="{Binding IsRegular}"/>
+                <Label Text="{Binding Title}" FontSize="Large" HorizontalOptions="Center"></Label>
+                <Label Text="   " FontSize="Large"></Label>
+                <microcharts:ChartView Chart="{Binding MainChart}" HeightRequest="250"/>
+                <Label Text="   " FontSize="Large"></Label>
+                <Button Text="Next Chart" Command="{Binding NextChart}"></Button>
+            </StackLayout>
+        </RefreshView>
+    </ContentView.Content>
+</ContentView>
