--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -86,14 +86,14 @@
                             <Label Text="User Name" Grid.Row="7" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding UserNameTyped}"/>
                             <Label Text="{Binding UserNameError}" Grid.Row="7" IsVisible="{Binding ShowUserNameError}" FontSize="14" HorizontalOptions="End"
-                                   VerticalOptions="End" TextColor="#e63946"/>
+                                   VerticalOptions="End" TextColor="#e63946" HorizontalTextAlignment="End"/>
                             
                                 
                                 <Entry Grid.Row="8"  Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
 
                             <Label Text="Email" Grid.Row="9" Style="{StaticResource labelNameStyle}"
                             IsVisible="{Binding EmailTyped}"/>
-                            <Label Text="{Binding EmailError}" Grid.Row="9" IsVisible="{Binding ShowEmailError}" Style="{StaticResource labelErrorStyle}"/>
+                            <Label Text="{Binding EmailError}" HorizontalTextAlignment="End" Grid.Row="9" IsVisible="{Binding ShowEmailError}" Style="{StaticResource labelErrorStyle}"/>
                                 
                                 <Entry Grid.Row="10"  Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
 
